--- a/index.html
+++ b/index.html
@@ -1758,18 +1758,18 @@
                                         <div class="portfolio-slider-alt">
                                             <ul class="slides">
                                                 <li>
-                                                    <a href="assets/img/portfolio/12.jpg" title="Freshness">
-                                                        <img src="assets/img/portfolio/12.jpg" alt="">
+                                                    <a href="assets/img/portfolio/12.JPG" title="Freshness">
+                                                        <img src="assets/img/portfolio/12.JPG" alt="">
                                                     </a>
                                                 </li>
                                                 <li>
-                                                    <a href="assets/img/portfolio/12a.jpg" title="Massive">
-                                                        <img src="assets/img/portfolio/12a.jpg" alt="">
+                                                    <a href="assets/img/portfolio/12a.JPG" title="Massive">
+                                                        <img src="assets/img/portfolio/12a.JPG" alt="">
                                                     </a>
                                                 </li>
                                                 <li>
-                                                    <a href="assets/img/portfolio/12b.jpg" title="Bootstrap">
-                                                        <img src="assets/img/portfolio/12b.jpg" alt="">
+                                                    <a href="assets/img/portfolio/12b.JPG" title="Bootstrap">
+                                                        <img src="assets/img/portfolio/12b.JPG" alt="">
                                                     </a>
                                                 </li>
                                             </ul>
