--- a/index.html
+++ b/index.html
@@ -1267,7 +1267,7 @@
                                                       <i class="icon-briefcase"></i>
                                                   </div>
                                                     <div class="fun-infolight">
-                                                        <h4 class="text-xl"> Senior Software Engineer</h4>
+                                                        <h4 class="text-xl"> Freelance Developer</h4>
                                                          <span>Lyflip, Kolkata, India</span>
 
                                                      </div>
