--- a/index.html
+++ b/index.html
@@ -943,7 +943,7 @@
                             <p align="justify" style="margin-top: 5%; line-height: 2.3em; font-size: 1.15em;">
                             <span  style=" float: left;    font-size: 75px;        padding-top: 4%;    padding-right: 8px;    padding-left: 3px;">Hi,</span>
                             <p align="justify" style="margin-top: 5%; line-height: 2.3em; font-size: 1.15em;">
-                            my name is Sougata Dafader. I am a freelance graphic designer and software developer based in India. My superpower is to create clear and captivating visual content along with optimized backend code. I create applications for Windows, Web and Cell Phones. 
+                            my name is Sougata Dafader. I am a freelance graphic designer and software developer based in Boston, Massachusetts. My superpower is to create clear and captivating visual content along with optimized backend code. I create applications for Windows, Web and Cell Phones. 
 
                             </p>
                             <p align="justify" style="margin-top: 0%; line-height: 2.3em; font-size: 1.15em;">
