--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
         <link rel="stylesheet" type="text/css" href="assets/css/demo.css" />
         <link rel="stylesheet" type="text/css" href="assets/css/component.css" />
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-118360052-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-118360052-1');
+</script>
 
 
     <script src="//load.sumome.com/" data-sumo-site-id="26c0f7bfe8b5520009c881725bd28a1ea79cc71f3c05a16c3dc8f950035d78c4" async="async"></script>
