--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
     <title>Sougata Dafader</title>
 
-    <!--common style-->
-    <link href='http://fonts.googleapis.com/css?family=Abel|Source+Sans+Pro:400,300,300italic,400italic,600,600italic,700,700italic,900,900italic,200italic,200' rel='stylesheet' type='text/css'>
+    <!--common style
+    <link href='http://fonts.googleapis.com/css?family=Abel|Source+Sans+Pro:400,300,300italic,400italic,600,600italic,700,700italic,900,900italic,200italic,200' rel='stylesheet' type='text/css'>-->
 
     <!-- inject:css -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
