--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <meta name="description" content="Portfolio of Sougata Dafader">
-    <meta name="author" content="Sougata">
+    <meta name="author" content="Sougata Dafader">
+    <meta name="keywords" content="Full Stack,Developer,Portfolio,Java,C#,React,HTML,CSS,XML,JavaScript">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--favicon icon-->
     <link rel="icon" type="image/png" href="assets/img/favicon.png">
 
     <title>Sougata Dafader</title>
-
-    <!--common style
-    <link href='http://fonts.googleapis.com/css?family=Abel|Source+Sans+Pro:400,300,300italic,400italic,600,600italic,700,700italic,900,900italic,200italic,200' rel='stylesheet' type='text/css'>-->
 
     <!-- inject:css -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
