--- a/index.html
+++ b/index.html
@@ -403,6 +403,16 @@
                                             </dt>
                                             <dd>
                                                 <div class="fun-factor">
+                                                	<div class="iconlight">
+                                                      <i class="icon-briefcase"></i>
+                                                  </div>
+                                                    <div class="fun-infolight">
+                                                        <h4 class="text-xl"> Freelance Developer</h4>
+                                                         <span>Lyflip, Kolkata, India</span>
+
+                                                     </div>
+                                                     <span>July 2016 -  July 2017</span>
+                                                    <hr>
                                                   <div class="iconlight">
                                                       <i class="icon-briefcase"></i>
                                                   </div>
@@ -411,7 +421,7 @@
                                                          <span>Lyflip, Kolkata, India</span>
 
                                                      </div>
-                                                     <span>July 2016 -  Present</span>
+                                                     <span>July 2016 -  July 2017</span>
                                                     <hr>
                                                     <div class="iconlight">
                                                       <i class="icon-briefcase"></i>
@@ -754,7 +764,7 @@
                     <div class="heading-title-alt border-short-bottom text-center ">
                         <a id="ContactMe"></a>
                         <h2 class="text-uppercase theme-color">Contact Me</h2>
-                        <div class="half-txt">Convinced to hire Me?  <br/> Great, below are the ways you can get in touch with me.</div>
+                        <div class="half-txt">Wish to ?  <br/> Great, below are the ways you can get in touch with me.</div>
                     </div>
 
                     <div class="row page-content">
@@ -767,11 +777,11 @@
                                     <h4>location</h4>
                                     Send me a post-card
                                 </div>
-                                <a >
-                                    55/1/5, Parui Pacca Road,
-                                    <br/>P.O- Sarsuna, Behala, Kolkata
+                                <a>
+                                    202,Northampton Street,
+                                    <br/>Apartment #1
                                     <br/>
-                                    India 700061
+                                    Boston,MA- 02118
                                 </a>
                             </div>
                         </div>
@@ -815,7 +825,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="copyright">
-                        &copy; Sougata Dafader 2017.
+                        &copy; Sougata Dafader 2018.
                     </div>
                     <div class="copyright-sub-title text-uppercase">
                         All Rights Reserved.
@@ -823,7 +833,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="social-link pull-right circle ">
-                        <a href="https://www.linkedin.com/in/sougata-dafader-98292b54/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                        <a href="https://www.linkedin.com/in/sdafader/" target="_blank"><i class="fa fa-linkedin"></i></a>
                         
                     </div>
                 </div>
