work experience update

--- a/index.html
+++ b/index.html
@@ -403,16 +403,29 @@
                                             </dt>
                                             <dd>
                                                 <div class="fun-factor">
+                                                	<!-- Work Exp Goes here-->
                                                 	<div class="iconlight">
                                                       <i class="icon-briefcase"></i>
                                                   </div>
                                                     <div class="fun-infolight">
-                                                        <h4 class="text-xl"> Freelance Developer</h4>
-                                                         <span>Lyflip, Kolkata, India</span>
+                                                        <h4 class="text-xl"> Web Specialist</h4>
+                                                         <span>GRI, Northeastern University, Boston, USA</span>
+                                                     </div>
+                                                     <span>January 2018 -  Present</span>
+                                                    <hr>
+                                                    <!-- Work Exp Ends here-->
+                                                	<!-- Work Exp Goes here-->
+                                                	<div class="iconlight">
+                                                      <i class="icon-briefcase"></i>
+                                                  </div>
+                                                    <div class="fun-infolight">
+                                                        <h4 class="text-xl"> Content Migration Assistant</h4>
+                                                         <span>CAMD, Northeastern University, Boston, USA</span>
 
                                                      </div>
-                                                     <span>July 2016 -  July 2017</span>
+                                                     <span>January 2018 -  Present</span>
                                                     <hr>
+                                                    <!-- Work Exp Ends here-->
                                                   <div class="iconlight">
                                                       <i class="icon-briefcase"></i>
                                                   </div>
