--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                             </li>
                             <!--Facebook/Linkedin -->
                             <li class="cart-info">
-                                <a href="https://www.linkedin.com/in/sougata-dafader-98292b54/" target="_blank"><i class="fa fa-linkedin"></i> LinkedIn</a>
+                                <a href="https://www.linkedin.com/in/sdafader/" target="_blank"><i class="fa fa-linkedin"></i> LinkedIn</a>
                             </li>
                         </ul>
                         <!--mega menu end-->
@@ -777,7 +777,7 @@
                     <div class="heading-title-alt border-short-bottom text-center ">
                         <a id="ContactMe"></a>
                         <h2 class="text-uppercase theme-color">Contact Me</h2>
-                        <div class="half-txt">Wish to ?  <br/> Great, below are the ways you can get in touch with me.</div>
+                        <div class="half-txt">Wish to get in touch with me?  <br/> Great, below are the ways you can get in touch with me.</div>
                     </div>
 
                     <div class="row page-content">
@@ -811,7 +811,7 @@
                                 <div class="desc">
                                     
                                     
-                                    <a href="mailto:sougatadafader@gmail.com" target="_top">sougatadafader@gmail.com</a>
+                                    <a href="mailto:dafader.s@husky.neu.edu" target="_top">dafader.s@husky.neu.edu</a>
 
 
 
