--- a/index.html
+++ b/index.html
@@ -320,10 +320,17 @@
                                     </p>    
 
                                     <div class="p-top-30">
+                                    	<!-- progress bar start -->
+                                        <div class="progress massive-progress">
+                                            <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+                                                Java <span>78%</span>
+                                            </div>
+                                        </div>
+                                        <!-- progress bar end -->
                                         <!-- progress bar start -->
                                         <div class="progress massive-progress">
                                             <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
-                                                C# <span>70%</span>
+                                                C# <span>75%</span>
                                             </div>
                                         </div>
                                         <!-- progress bar end -->
@@ -332,6 +339,20 @@
                                         <div class="progress massive-progress">
                                             <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
                                                 Python <span>60%</span>
+                                            </div>
+                                        </div>
+                                        <!-- progress bar end -->
+                                        <!-- progress bar start -->
+                                        <div class="progress massive-progress">
+                                            <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+                                                ReactJs <span>60%</span>
+                                            </div>
+                                        </div>
+                                        <!-- progress bar end -->
+                                         <!-- progress bar start -->
+                                        <div class="progress massive-progress">
+                                            <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+                                                React Native <span>65%</span>
                                             </div>
                                         </div>
                                         <!-- progress bar end -->
