--- a/index.html
+++ b/index.html
@@ -334,6 +334,13 @@
                                             </div>
                                         </div>
                                         <!-- progress bar end -->
+                                         <!-- progress bar start -->
+                                        <div class="progress massive-progress">
+                                            <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+                                                C/C++ <span>72%</span>
+                                            </div>
+                                        </div>
+                                        <!-- progress bar end -->
 
                                         <!-- progress bar start -->
                                         <div class="progress massive-progress">
@@ -357,14 +364,7 @@
                                         </div>
                                         <!-- progress bar end -->
                                       
-                                        <!-- progress bar start -->
-                                        <div class="progress massive-progress">
-                                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-                                                GRAPHIC DESIGN <span>90%</span>
-                                            </div>
-                                        </div>
-                                        <!-- progress bar end -->
-
+                                   
                                         <!-- progress bar start -->
                                         <div class="progress massive-progress">
                                             <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
