--- a/index.html
+++ b/index.html
@@ -349,6 +349,13 @@
                                             </div>
                                         </div>
                                         <!-- progress bar end -->
+                                         <!-- progress bar start -->
+                                        <div class="progress massive-progress">
+                                            <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+                                               Git <span>70%</span>
+                                            </div>
+                                        </div>
+                                        <!-- progress bar end -->
                                         <!-- progress bar start -->
                                         <div class="progress massive-progress">
                                             <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
@@ -360,15 +367,6 @@
                                         <div class="progress massive-progress">
                                             <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
                                                 React Native <span>65%</span>
-                                            </div>
-                                        </div>
-                                        <!-- progress bar end -->
-                                      
-                                   
-                                        <!-- progress bar start -->
-                                        <div class="progress massive-progress">
-                                            <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
-                                                PROJECT MANAGEMENT <span>85% </span>
                                             </div>
                                         </div>
                                         <!-- progress bar end -->
