--- a/index.html
+++ b/index.html
@@ -349,6 +349,13 @@
                                             </div>
                                         </div>
                                         <!-- progress bar end -->
+                                        <!-- progress bar start -->
+                                        <div class="progress massive-progress">
+                                            <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+                                                Php <span>70%</span>
+                                            </div>
+                                        </div>
+                                        <!-- progress bar end -->
                                          <!-- progress bar start -->
                                         <div class="progress massive-progress">
                                             <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
@@ -430,7 +437,7 @@
                                                         <h4 class="text-xl"> Web Specialist</h4>
                                                          <span>GRI, Northeastern University, Boston, USA</span>
                                                      </div>
-                                                     <span>January 2018 -  Present</span>
+                                                     <span>May 2018 -  Present</span>
                                                     <hr>
                                                     <!-- Work Exp Ends here-->
                                                 	<!-- Work Exp Goes here-->
