--- a/index.html
+++ b/index.html
@@ -160,12 +160,10 @@
                             <p align="justify" style="margin-top: 5%; line-height: 2.3em; font-size: 1.15em;">
                             <span  style=" float: left;    font-size: 75px;        padding-top: 4%;    padding-right: 8px;    padding-left: 3px;">Hi,</span>
                             <p align="justify" style="margin-top: 5%; line-height: 2.3em; font-size: 1.15em;">
-                            my name is Sougata Dafader. I am a freelance graphic designer and software developer based in Boston, Massachusetts. My superpower is to create clear and captivating visual content along with optimized backend code. I create applications for Windows, Web and Cell Phones. 
-
+                            my name is Sougata Dafader. Currently, I am pursuing my Mastesrs in Computer Science at Northeastern University, Boston. I am a full stack developer based in Boston, Massachusetts. My superpower is to create clear and captivating visual content along with optimized backend code. I create responsive applications for Windows, Web and Cell Phones.
                             </p>
                             <p align="justify" style="margin-top: 0%; line-height: 2.3em; font-size: 1.15em;">
-                            <!--Believing in the endless possibilities a Computer technology can offer, I live each day to learn something new and hone my existing skills. -->
-                            After completing my undergraduate degree in Computer Science, I joined a software firm to develop Web/Windows Solutions, Cross Platform applications for Android and IOS. Later I started working for a startup at my hometown. Currently I am pursuing my Masters in Computer Science from Northeastern University, Boston. My capabilities, motivation, tenacity and zeal have been the four corner stones of my career and I believe this strong foundation will help me maintain my steady growth.</p>
+                            After completing my undergraduate degree in Computer Science, I joined a software firm to develop Web/Windows Solutions, Cross Platform applications for Android and IOS. My capabilities, motivation, tenacity and zeal have been the four corner stones of my career and I believe this strong foundation will help me maintain my steady growth.</p>
 
                                 <p align="justify" style="margin-top: 0%; line-height: 2.3em; font-size: 1.15em;">
                                 My love for coding equals the love for visual designing. I dedicate my career to work closely with my clients and deliver the exact requirement. I have worked with clients of all shapes and sizes in the industry and have found that it is through a team that I achieve my greatest potential. In my leisure time I like to discuss trending ideas, technologies, music, and food recipes. Best part of being a 'Techie' is to meet new people, understanding their requirements,taking up new roles, meeting tight deadlines and trying my best to foresee the possible obstacles. Up till now I have loved facing these challenges and I believe to do so in days ahead. If this sounds exciting, then feel free to contact me for any suitable opportunity.
@@ -195,7 +193,7 @@
                             <a id="whatido"></a>
                             <div class="heading-title-alt text-center">
                                 <span class="heading-sub-title text-uppercase theme-color" style="font-size: 2em">what I do</span>
-                                <h4 class="text-uppercase">Provide End to End Solution</h4>
+                                <h4 class="text-uppercase">Take care of everything. Front-End or Back-End</h4>
                             </div>
                             <!--title-->
                         </div>
@@ -873,6 +871,12 @@
                 <div class="col-md-6">
                     <div class="social-link pull-right circle ">
                         <a href="https://www.linkedin.com/in/sdafader/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                        
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="social-link pull-right circle ">
+                        <a href="https://github.com/sougatadafader" target="_blank"><i class="fa fa-github"></i></a>
                         
                     </div>
                 </div>
