--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                          
                         <div class="col-md-4 m-bot-80">
                             <div class="responsive-img text-center m-bot-50 m-top-100" >
-                                <img src="assets/img/IMG_7137_sRGB.JPG" style="height: 70%; width: 70%" alt="" />
+                                <img src="assets/img/lap.png" style="height: 70%; width: 70%" alt="" />
                             </div>
                             <div class="col-md-12 m-bot-100">
                             <!--<p class="font-monotype" style="color: #000 ; text-align: left;">creative, dynamic, goal-oriented, focussed, passionate</p>-->
