--- a/index.html
+++ b/index.html
@@ -698,17 +698,17 @@
                                         <div class="portfolio-slider">
                                             <ul class="slides">
                                                 <li>
-                                                    <a href="assets/img/portfolio/04a.jpg" title="Freshness">
+                                                    <a href="assets/img/portfolio/04a.jpg" title="">
                                                         <img src="assets/img/portfolio/04a.jpg" alt="">
                                                     </a>
                                                 </li>
                                                 <li>
-                                                    <a href="assets/img/portfolio/04b.jpg" title="Massive">
+                                                    <a href="assets/img/portfolio/04b.jpg" title="">
                                                         <img src="assets/img/portfolio/04b.jpg" alt="">
                                                     </a>
                                                 </li>
                                                 <li>
-                                                    <a href="assets/img/portfolio/04c.jpg" title="Bootstrap">
+                                                    <a href="assets/img/portfolio/04c.jpg" title="">
                                                         <img src="assets/img/portfolio/04c.jpg" alt="">
                                                     </a>
                                                 </li>
@@ -735,17 +735,17 @@
                                         <div class="portfolio-slider-alt">
                                             <ul class="slides">
                                                 <li>
-                                                    <a href="assets/img/portfolio/12.JPG" title="Freshness">
+                                                    <a href="assets/img/portfolio/12.JPG" title="">
                                                         <img src="assets/img/portfolio/12.JPG" alt="">
                                                     </a>
                                                 </li>
                                                 <li>
-                                                    <a href="assets/img/portfolio/12a.JPG" title="Massive">
+                                                    <a href="assets/img/portfolio/12a.JPG" title="">
                                                         <img src="assets/img/portfolio/12a.JPG" alt="">
                                                     </a>
                                                 </li>
                                                 <li>
-                                                    <a href="assets/img/portfolio/12b.JPG" title="Bootstrap">
+                                                    <a href="assets/img/portfolio/12b.JPG" title="">
                                                         <img src="assets/img/portfolio/12b.JPG" alt="">
                                                     </a>
                                                 </li>
