--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                             </li>
                             <!--Github -->
                             <li class="cart-info">
-                                <a href="https://github.com/sougatadafader/" target="_blank"><i class="fa fa-github"></i><h4 style="text-decoration: underline;">Github</h4></a>
+                                <a href="https://github.com/sougatadafader/" target="_blank"><i class="fa fa-github" style="text-decoration: underline;"></i>Github</a>
                             </li>
                             <!--Linkedin -->
                             <li class="cart-info">
