--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                             </li>
                             <!--Github -->
                             <li class="cart-info">
-                                <a href="https://github.com/sougatadafader/" target="_blank"><i class="fa fa-github"></i><div style="text-decoration: underline;"> Github</div></a>
+                                <a href="https://github.com/sougatadafader/" target="_blank"><i class="fa fa-github"></i><span style="text-decoration: underline;"> Github</span></a>
                             </li>
                             <!--Linkedin -->
                             <li class="cart-info">
