--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                             </li>
                             <!--Linkedin -->
                             <li class="cart-info">
-                                <a href="https://www.linkedin.com/in/sdafader/" target="_blank"><i class="fa fa-linkedin"></i> LinkedIn</a>
+                                <a href="https://www.linkedin.com/in/sdafader/" target="_blank"><i class="fa fa-linkedin"></i> <span style="text-decoration: underline;">LinkedIn</span></a>
                             </li>
                              
                         </ul>
