--- a/index.html
+++ b/index.html
@@ -323,6 +323,22 @@
                                     </p>    
 
                                     <div class="p-top-30">
+                                        <!-- progress bar start -->
+                                        <div class="progress massive-progress">
+                                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                                                ReactJs <span>90%</span>
+                                            </div>
+                                        </div>
+                                        <!-- progress bar end -->
+
+                                        <!-- progress bar start -->
+                                        <div class="progress massive-progress">
+                                            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                                                React Native <span>80%</span>
+                                            </div>
+                                        </div>
+                                        <!-- progress bar end -->
+
                                     	<!-- progress bar start -->
                                         <div class="progress massive-progress">
                                             <div class="progress-bar" role="progressbar" aria-valuenow="78" aria-valuemin="0" aria-valuemax="100">
@@ -366,20 +382,8 @@
                                             </div>
                                         </div>
                                         <!-- progress bar end -->
-                                        <!-- progress bar start -->
-                                        <div class="progress massive-progress">
-                                            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
-                                                ReactJs <span>60%</span>
-                                            </div>
-                                        </div>
-                                        <!-- progress bar end -->
-                                         <!-- progress bar start -->
-                                        <div class="progress massive-progress">
-                                            <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">
-                                                React Native <span>65%</span>
-                                            </div>
-                                        </div>
-                                        <!-- progress bar end -->
+                                        
+                                         
 
                                           <!-- progress bar start -->
                                         <div class="progress massive-progress">
@@ -432,6 +436,17 @@
                                             </dt>
                                             <dd>
                                                 <div class="fun-factor">
+                                                    <!-- Work Exp Goes here-->
+                                                    <div class="iconlight">
+                                                      <i class="icon-briefcase"></i>
+                                                  </div>
+                                                    <div class="fun-infolight">
+                                                        <h4 class="text-xl"> Full Stack Developer Coop</h4>
+                                                         <span>FCAT, Fidelity Investments, Boston, USA</span>
+                                                     </div>
+                                                     <span>Jan 2019 -  July 2019</span>
+                                                    <hr>
+                                                    <!-- Work Exp Ends here-->
                                                 	<!-- Work Exp Goes here-->
                                                 	<div class="iconlight">
                                                       <i class="icon-briefcase"></i>
@@ -440,7 +455,7 @@
                                                         <h4 class="text-xl"> Web Specialist</h4>
                                                          <span>GRI, Northeastern University, Boston, USA</span>
                                                      </div>
-                                                     <span>May 2018 -  Present</span>
+                                                     <span>May 2018 -  September 2018</span>
                                                     <hr>
                                                     <!-- Work Exp Ends here-->
                                                 	<!-- Work Exp Goes here-->
@@ -448,7 +463,7 @@
                                                       <i class="icon-briefcase"></i>
                                                   </div>
                                                     <div class="fun-infolight">
-                                                        <h4 class="text-xl"> Content Migration Assistant</h4>
+                                                        <h4 class="text-xl"> Web Developer</h4>
                                                          <span>CAMD, Northeastern University, Boston, USA</span>
 
                                                      </div>
@@ -867,7 +882,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="copyright">
-                        &copy; Sougata Dafader 2018.
+                        &copy; Sougata Dafader 2019.
                     </div>
                     <div class="copyright-sub-title text-uppercase">
                         All Rights Reserved.
