Updated Address and grad date

--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
                                                         <h4 class="text-xl"> Masters of Science in Computer Science</h4>
                                                          <span>Northeastern University, Boston, USA</span>
                                                          <br>
-                                                         <span>2017-Present</span>
+                                                         <span>2017-2019</span>
                                                      </div>
                                                 
                                                 <hr>
