Update Job stats and basic info.

--- a/index.html
+++ b/index.html
@@ -394,11 +394,6 @@
                                 </div>
                             </div>
 
-
-
-
-
-
                             <div class="col-md-6" style="margin-left: 0%">
                                 
                                     <div class="light-txt">
@@ -422,10 +417,16 @@
                                                         <i class="icon-briefcase"></i>
                                                       </div>
                                                       <div class="fun-infolight">
+                                                        <h4 class="text-xl"> Software Engineer II</h4>
+                                                         <span>Amazon , Seattle, USA</span>
+                                                     </div>
+                                                     <span>March 2021 -  Present</span>
+                                                    <hr>
+                                                      <div class="fun-infolight">
                                                           <h4 class="text-xl"> Software Engineer II</h4>
                                                            <span>The Mathworks,Inc. , Natick, USA</span>
                                                        </div>
-                                                       <span>Jan 2020 -  Present</span>
+                                                       <span>Jan 2020 -  March 2021</span>
                                                       <hr>
                                                       <!-- Work Exp Ends here-->
                                                     <!-- Work Exp Goes here-->
@@ -827,10 +828,9 @@
                                     Send me a post-card
                                 </div>
                                 <a>
-                                    30,Saint Alphonsus Street,
-                                    <br/>Roxbury Crossing,
+                                    Brier,
                                     <br/>
-                                    Boston,MA- 02120
+                                    Washington,WA- 98036
                                 </a>
                             </div>
                         </div>
@@ -874,7 +874,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="copyright">
-                        &copy; Sougata Dafader 2019.
+                        &copy; Sougata Dafader 2023.
                     </div>
                     <div class="copyright-sub-title text-uppercase">
                         All Rights Reserved.
